tests/paczka1/fuzzy1/15246244.err
Error in line 4: zPmoVJUy5 S112 61,5
Error in line 7: zPmoVJUy5 A172 12,0
Error in line 2: eU3DBqx5 A172 70,7
Error in line 12: eU3DBqx5 S139 38,7
Error in line 19: zPmo@JUy5 S139 47,5
Error in line 8: zPmoVJUy5 S139 58,7
Error in line 36: WVlp A172 25,5
Error in line 37: WVlp S112 25,0
Error in line 39: WVlp A172 30,1
